# penn-data-eng-challenge

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
dbt/: dbt_project.yml
dbt/models/base/nhl/: nhl_players.sql  player_game_stats.sql  player_game_stats.yml
dbt/models/mart/nhl/: points_leaders.sql
dbt/tests/generic/: greater_than_zero.sql
nhldata/: app.py
nhldata/jobs/: backfill_job.yml  incremental_job.yml
tests/: test_app.py
tests/resources/: boxscore_2019030042.json  schedule_2020_08_04_to_2020_08_05.json
utils/: create_games_stats.sql
