[tool.poetry]
name = "penn_data_eng_challenge"
version = "0.1.0"
description = "Penn Data Engineering Challenge"
authors = ["Daniel Castillo <dt.castillo20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
pandas = "^1.1.0"
boto3 = "^1.14.38"
PyYAML = "^6.0"
ratelimit = "^2.2.1"
backoff = "^2.1.2"
pytest = "^7.1.2"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
